--- a/software.html
+++ b/software.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="links">
-            <a class="link" href="overview.html">Overview</a>
+            <a class="link" href="index.html">Overview</a>
             <a class="linka" href="software.html">Software</a>
             <a class="link" href="techspecs.html">Tech Specs</a>
             <button class="button"></button>
