--- a/techspecs.html
+++ b/techspecs.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="links">
-            <a class="link" href="overview.html">Overview</a>
+            <a class="link" href="index.html">Overview</a>
             <a class="link" href="software.html">Software</a>
             <a class="linka" href="techspecs.html">Tech Specs</a>
             <button class="button"></button>
