--- a/techspecs.html
+++ b/techspecs.html
@@ -12,7 +12,7 @@
 
     <div class="header">
         <div class="logo">
-            <a href="overview.html">IdeaBox 360°</a>
+            <a href="index.html">IdeaBox 360°</a>
         </div>
 
         <div class="links">
