--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <div class="header">
         <div class="logo">
-            <a href="overview.html">IdeaBox 360°</a>
+            <a href="index.html">IdeaBox 360°</a>
         </div>
 
         <div class="links">
-            <a class="linka" href="index.html">Overview</a>
+            <a class="link" href="index.html">Overview</a>
             <a class="link" href="software.html">Software</a>
             <a class="link" href="techspecs.html">Tech Specs</a>
             <button class="button"></button>
