--- a/techspecs.html
+++ b/techspecs.html
@@ -18,7 +18,7 @@
         <div class="links">
             <a class="link" href="index.html">Overview</a>
             <a class="link" href="software.html">Software</a>
-            <a class="linka" href="techspecs.html">Tech Specs</a>
+            <a class="link" href="techspecs.html">Tech Specs</a>
             <button class="button"></button>
         </div>
     </div>
