--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="links">
-            <a class="link" href="index.html">Overview</a>
+            <a class="linka" href="index.html">Overview</a>
             <a class="link" href="software.html">Software</a>
             <a class="link" href="techspecs.html">Tech Specs</a>
             <button class="button"></button>
